# wayfire-plugins-extra

./: .gitmodules  LICENSE  README.md  meson.build  meson_options.txt
.github/workflows/: ci.yaml
ipc-scripts/: ipc-ghost-toggle.py  pin-view.py  set-obs-effect.py  trailfocus.py  unpin-view.py  view-shot.py  wayfire_socket.py  workspace-names-expo.py  workspace-names-setter-gtk.py  workspace-names-setter.py
locale/: meson.build
locale/ro/: wf-plugin-fisheye.po
locale/ro/LC_MESSAGES/: wf-plugin-annotate.po  wf-plugin-autorotate-iio.po  wf-plugin-bench.po  wf-plugin-crosshair.po  wf-plugin-extra-animations.po  wf-plugin-focus-change.po  wf-plugin-focus-steal-prevent.po  wf-plugin-follow-focus.po  wf-plugin-force-fullscreen.po  wf-plugin-ghost.po  wf-plugin-hide-cursor.po  wf-plugin-join-views.po  wf-plugin-keycolor.po  wf-plugin-mag.po  wf-plugin-obs.po  wf-plugin-pin-view.po  wf-plugin-showrepaint.po  wf-plugin-showtouch.po  wf-plugin-view-shot.po  wf-plugin-water.po  wf-plugin-window-zoom.po  wf-plugin-workspace-names.po
locale/ro_RO/LC_MESSAGES/: wf-plugin-annotate.po  wf-plugin-autorotate-iio.po  wf-plugin-bench.po  wf-plugin-crosshair.po  wf-plugin-extra-animations.po  wf-plugin-focus-change.po  wf-plugin-focus-steal-prevent.po  wf-plugin-follow-focus.po  wf-plugin-force-fullscreen.po  wf-plugin-ghost.po  wf-plugin-hide-cursor.po  wf-plugin-join-views.po  wf-plugin-keycolor.po  wf-plugin-mag.po  wf-plugin-obs.po  wf-plugin-pin-view.po  wf-plugin-showrepaint.po  wf-plugin-showtouch.po  wf-plugin-view-shot.po  wf-plugin-water.po  wf-plugin-window-zoom.po  wf-plugin-workspace-names.po
locale/zh_CN/LC_MESSAGES/: wf-plugin-annotate.po  wf-plugin-autorotate-iio.po  wf-plugin-bench.po  wf-plugin-crosshair.po  wf-plugin-extra-animations.po  wf-plugin-focus-change.po  wf-plugin-focus-steal-prevent.po  wf-plugin-follow-focus.po  wf-plugin-force-fullscreen.po  wf-plugin-ghost.po  wf-plugin-hide-cursor.po  wf-plugin-join-views.po  wf-plugin-keycolor.po  wf-plugin-mag.po  wf-plugin-obs.po  wf-plugin-pin-view.po  wf-plugin-showrepaint.po  wf-plugin-showtouch.po  wf-plugin-view-shot.po  wf-plugin-water.po  wf-plugin-window-zoom.po  wf-plugin-workspace-names.po
metadata/: annotate.xml  autorotate-iio.xml  background-view.xml  bench.xml  crosshair.xml  extra-animations.xml  fisheye.xml  focus-change.xml  focus-steal-prevent.xml  follow-focus.xml  force-fullscreen.xml  fullscreen.xml  ghost.xml  hide-cursor.xml  hinge.xml  join-views.xml  keycolor.xml  mag.xml  meson.build  obs.xml  pin-view.xml  showrepaint.xml  showtouch.xml  view-shot.xml  water.xml  window-menu.xml  window-swallow.xml  window-zoom.xml  workspace-names.xml
proto/: meson.build
src/: annotate.cpp  autorotate-iio.cpp  background-view.cpp  bench.cpp  crosshair.cpp  fisheye.cpp  focus-change.cpp  focus-steal-prevent.cpp  follow-focus.cpp  force-fullscreen.cpp  fullscreen.cpp  ghost.cpp  glib-main-loop.cpp  hide-cursor.cpp  hinge.cpp  join-views.cpp  keycolor.cpp  mag.cpp  meson.build  obs.cpp  pin-view.cpp  showrepaint.cpp  showtouch.cpp  view-shot.cpp  water.cpp  window-menu.cpp  window-swallow.cpp  window-zoom.cpp  workspace-names.cpp
src/extra-animations/: blinds.hpp  burn.hpp  carpet.hpp  dodge.hpp  helix.hpp  melt.hpp  meson.build  plugin.cpp  shatter.hpp  vortex.hpp
src/network-keyboard/: client.cpp  keymap.tpp  meson.build  server.cpp
src/network-keyboard/shared/: os-compatibility.c  os-compatibility.h
src/remote-view/: ipc-activator.hpp  ipc-helpers.hpp  ipc-method-repository.hpp  meson.build  remote-view-workspace-wall.hpp  remoteview-move-drag-interface.hpp  remoteview.cpp
