option('enable_windecor', type: 'boolean', value: 'false', description: 'Install windecor plugin')
option('enable_wayfire_shadows', type: 'boolean', value: 'false', description: 'Install wayfire shadows plugin')
option('enable_focus_request', type: 'boolean', value: 'false', description: 'Install wayfire focus-request plugin')
