install_data('annotate.xml', install_dir: wayfire.get_variable(pkgconfig: 'metadatadir'))
install_data('autorotate-iio.xml', install_dir: wayfire.get_variable(pkgconfig: 'metadatadir'))
install_data('background-view.xml', install_dir: wayfire.get_variable(pkgconfig: 'metadatadir'))
install_data('bench.xml', install_dir: wayfire.get_variable(pkgconfig: 'metadatadir'))
install_data('join-views.xml', install_dir: wayfire.get_variable(pkgconfig: 'metadatadir'))
